fix : select2 overlap issue

--- a/inc/customizer/custom-controls/assets/css/unminified/select-multi-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/select-multi-rtl.css
@@ -67,3 +67,7 @@
 .ast-customizer-select-multi .ast-multi-select__menu *, .ast-customizer-select-multi .ast-multi-select__multi-value__remove {
     cursor: pointer;
 }
+
+.ast-customizer-select-multi .ast-multi-select__menu {
+    z-index: 2;
+}
